--- a/CHANGES
+++ b/CHANGES
@@ -37,6 +37,8 @@
     together support for %.2f.  Don't look at the code, please!
   fixed tcsetpgrp (oops, this is embarassing!  Thanks, Chris Siebenmann)
   imported fix for entlib by Jeff Garzik.
+  add glob implementation from Guillaume Cottenceau (Thanks!!)
+  add libdl fragments from Olaf (Yeah!  One step closer to dynamic linking!)
 
 0.9:
   fixed initgroups (oops)
