much improved regular expressions (REG_ICASE handling, substring handling (i.e. regex "foo" matches "blaatfoo"), REG_NOTBOL and REG_NOTEOL handling, word start/end handling).  In short: I begin to gain confidence in them.  Object file size: 4408 bytes.

--- a/CHANGES
+++ b/CHANGES
@@ -39,6 +39,8 @@
   imported fix for entlib by Jeff Garzik.
   add glob implementation from Guillaume Cottenceau (Thanks!!)
   add libdl fragments from Olaf (Yeah!  One step closer to dynamic linking!)
+  add REG_ICASE and word start/end handling to my regular expressions.
+  my regular expressions now actually match substrings (i.e. "foobar" to "bar").
 
 0.9:
   fixed initgroups (oops)
