--- a/CHANGES
+++ b/CHANGES
@@ -49,6 +49,7 @@
   add abs, labs, llabs.
   add <sys/io.h>, ioperm syscall.
   add flock to <sys/file.h>
+  fixes to bsearch and the regular expressions.
 
 0.9:
   fixed initgroups (oops)
