paaaarty!  getaddrinfo is there! ;)

--- a/CHANGES
+++ b/CHANGES
@@ -55,6 +55,7 @@
   add killpg
   implemented a gross hack to make libpthread compile when
     dietfeatures.h does not define WANT_THREAD_SAFE (it's empty then).
+  add getaddrinfo and freeaddrinfo (man, what a fucked up interface!)
 
 0.9:
   fixed initgroups (oops)
