--- a/CHANGES
+++ b/CHANGES
@@ -56,6 +56,7 @@
   implemented a gross hack to make libpthread compile when
     dietfeatures.h does not define WANT_THREAD_SAFE (it's empty then).
   add getaddrinfo and freeaddrinfo (man, what a fucked up interface!)
+  fix sigsuspend (syscall had completely fscked up arguments!)
 
 0.9:
   fixed initgroups (oops)
