--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.11:
+  fix major oops in DNS routines (only with WANT_FULL_RESOLV_CONF enabled).
+
 0.10:
   update getpagesize.
   add personality.
