misunderstanding of elf spec... now the code for relocation is fixed...

--- a/libdl/README
+++ b/libdl/README
@@ -2,5 +2,5 @@ this is the experimental libdl test-pre-pre-alpha code
 
 written by Olaf Dreesen
 
-Shouldn't work yet had some problems with the elf specs...
+Shouldn't work yet. Had and have some problems with the elf specs...
 and more inconsistencies...
