--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,10 @@
   fix vsscanf bug (Thanks, David Chappell).
   add floor, ceil and memchr prototypes.
   add __builtin_expect and expect #defines for gcc versions below 3.0
+  cleaner errno vs __errno_location handling
+  add placeholder iconv (iconv_open will always return EINVAL)
+  try to remove kernel 2.4 header dependency in IPv6 sockaddr_in6
+    initialization of getaddrinfo.
 
 0.10:
   update getpagesize.
