--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@
   Fix regular expression match for x* when there is no x at all.
   Fix memory leak in error case in gethostbyname(2|).  Thanks, Dietz Pröpper.
   Add %h to vsnprintf.
+  Add FAQ.
 
 0.10:
   update getpagesize.
