--- a/libdl/README
+++ b/libdl/README
@@ -1,6 +1,22 @@
-this is the experimental libdl test-pre-pre-alpha code
+this is the experimental libdl
 
 written by Olaf Dreesen
 
+
+Thu Jun  7 14:10:03 MEST 2001
+
+Status: test-pre-alpha code
+the code is now "testable" ...
+I need a dyn-dietlibc specific ld.so. (in work)
+
+TODO: rebuild the code in a more readable and consistent way.
+
+
+
+INITIAL May ? :
+
+Status: test-pre-pre-alpha code
+
 Shouldn't work yet. Had and have some problems with the elf specs...
 and more inconsistencies...
+
