add res_mkquery.  The diet libc can now compile and link mtr.

--- a/TODO
+++ b/TODO
@@ -19,3 +19,5 @@ gethostbyname/gethostbyname2: move static hostent to dynamic buffer so
 they can be free()d.
 
 mkdtemp
+
+res_mkquery should not assume op is QUERY
