add getopt_long, declare sys_errlist, and more global getopt variables to getopt_data so getopt_long does not reference getopt.

--- a/CHANGES
+++ b/CHANGES
@@ -36,6 +36,7 @@
   Olaf: added clone and a new unified_syscall for PowerPC
     also dynlinker is now available (i386 only at this time)
   crufted together a stdarg.h implementation from the various gcc headers.
+  implement getopt_long (ugh, the GNU people need professional help)
 
 0.10:
   update getpagesize.
