--- a/THANKS
+++ b/THANKS
@@ -6,7 +6,7 @@ uClibc, but the code has been completely replaced now.
 
 The malloc code was done by Olaf Dreesen, who also helped with the SPARC
 start code and fork().  Olaf also did the printf and scanf routines and
-he is currently implementing pthreads (wow!).
+he implemented pthreads (wow!) and his now writing a dynamic linker
 
 syslog and crypt were contributed by René Müller.
 
