ugh, touched all stdio and ripped out the non-ungetc and unbuffered modes.  Did some ELF weak symbol trickery to make `puts("foo")' not reference the whole stdio crap.

--- a/CHANGES
+++ b/CHANGES
@@ -55,6 +55,8 @@
     same problem.
     Peter also posted a patch to atexit/exit. With some modifications it is
     now implemented.
+  Unbuffered stdio and ungetc can no longer be disabled.  I will try to
+    implement part of it using ELF weak symbols.
 
 0.10:
   update getpagesize.
