add overflow handling for strtol and strtoul.

--- a/CHANGES
+++ b/CHANGES
@@ -60,6 +60,7 @@
   Unbuffered stdio and ungetc can no longer be disabled.  I will try to
     implement part of it using ELF weak symbols.
   Added minimal sysconf (tehe) from David Chappell.
+  Added overflow handling for strtoul and strtol.
 
 0.10:
   update getpagesize.
