--- a/TODO
+++ b/TODO
@@ -13,11 +13,10 @@ Try to improve code size and quality with __restrict__.
 
 FPU exception handling (for mawk)
 
-gethostbyname/gethostbyname2: move static hostent to dynamic buffer so
-they can be free()d.
-
 res_mkquery should not assume op is QUERY
 
 logging.
 
 new stdio.
+
+EINTR handling (*puke*).  What about EAGAIN?
