add openpty (for sshd), make gethostbyname2 actually honor WANT_ETC_HOSTS, make inet_pton accept "::" as IPv6 address (oops).

--- a/CHANGES
+++ b/CHANGES
@@ -65,6 +65,7 @@
     it before falling back to DNS if enabled.
   Added a littie backwards compatibility cruft for gpm (man, do these
     sources stink!)
+  Added openpty.
 
 0.10:
   update getpagesize.
