squeeze a few bytes in the ctype.h routines and fix a signedness snafu in strtoul.

--- a/CHANGES
+++ b/CHANGES
@@ -66,6 +66,7 @@
   Added a littie backwards compatibility cruft for gpm (man, do these
     sources stink!)
   Added openpty.
+  Squeeze a few bytes off the is* routines, courtesy of Peter Jones.
 
 0.10:
   update getpagesize.
