Today was the day (aeh yesterday was the start now the stop...) I have implemented all the *scanf functions (yes even sose crapy stdio variants..) Now I... WE have to test them :) (other should have FUN too ...)

--- a/TODO
+++ b/TODO
@@ -19,6 +19,8 @@ logging.
 
 new stdio.
 
+test .*scanf functions ....
+
 EINTR handling (*puke*).  What about EAGAIN?
 
 bizarre printf bullshit: "%8.7lx",0xfefe should yield " 000fefe"?!
