--- a/CHANGES
+++ b/CHANGES
@@ -67,6 +67,7 @@
     sources stink!)
   Added openpty.
   Squeeze a few bytes off the is* routines, courtesy of Peter Jones.
+  Olaf: I added a "stream" based scanf (all 6 scanf's are now available)
 
 0.10:
   update getpagesize.
