--- a/CHANGES
+++ b/CHANGES
@@ -78,6 +78,8 @@
     scanf and printf function implementations
   Imported a few more functions and optimizations from Frank Klemm (he
     also rewrote dtostr to have more precision)
+  Olaf: checked in a new sig* function family (based on rt_sig*).
+    legacy <2.2 signal-handling doesn't work at the moment.
 
 0.10:
   update getpagesize.
