--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.12:
   more contributions from Frank Klemm.
+  iconv can now do UCS-2, too.
 
 0.11:
   fix major oops in DNS routines (only with WANT_FULL_RESOLV_CONF enabled).
