I misspelled Michal as Michael in CHANGES

--- a/CHANGES
+++ b/CHANGES
@@ -5,7 +5,7 @@
   Lots of bug fixes, and several more i386 specific versions of common
     routines to make them smaller.
   add memmem (a GNU extension that looks useful)
-  several changes from Michael Ludvig: inttypes.h gets C99 macros,
+  several changes from Michal Ludvig: inttypes.h gets C99 macros,
     add pivot_root syscall, %n for *scanf.
   add adjtimex (thanks, Laurent BERCOT)
 
